Using new getLast method of Java 21